# Open-compute

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
Testing/Temporary/: CTestCostData.txt
open_compute/: CMakeLists.txt  Tensor.cpp  Tensor.hpp  TensorIterator.hpp  TensorOps.cpp  TensorOps.h  architecture_ops.h  main.cpp  matrix_math.h  matrix_math.hpp  range.cpp  range.h  range.hpp  shape.cpp  shape.h  shape.hpp  tensor.h  tensor_accessor.h  tensor_accessor.hpp  tensor_iterator.cpp  tensor_iterator.h  tensor_iterator.hpp  transformations.h  types.h  vector_math.cpp  vector_math.h
open_compute.xcodeproj/: project.pbxproj
open_compute.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
open_compute.xcodeproj/project.xcworkspace/xcuserdata/karimhasebou.xcuserdatad/: UserInterfaceState.xcuserstate
open_compute.xcodeproj/xcuserdata/karimhasebou.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/: CMakeLists.txt  matrix_math_test.cpp  tensor_accessor_test.cpp  tensor_iterator_test.cpp  tensor_test.cpp  vector_math_test.cpp
